[package]
name = "windloading"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dosio = { git = "https://github.com/rconan/dosio.git", branch = "main" }
serde = "1.0.126"
serde-pickle = "0.6.2"
