[package]
name = "windloading"
version = "0.1.0"
edition = "2021"

[dependencies]
dos-actors = { version = "3.0.1", package = "gmt_dos-actors", path = "../dos-actors" }
anyhow = "1.0.62"
bincode = "1.3.3"
env_logger = "0.9.0"
fem = { version = "0.3.0", package = "gmt-fem", features = [
    "fsm",
], path = "../fem" }
log = "0.4.17"
nalgebra = "0.31.1"
parse-monitors = "0.1.1"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
vec_box = "1.0.0"
windloads = { version = "0.1.0", path = "../dos-actors/clients/windloads", package = "gmt_dos-clients_windloads", features = [
    "fsm",
] }
mount = { version = "0.1.0", path = "../dos-actors/clients/mount", package = "gmt_dos-clients_mount" }
arrow = { version = "0.1.0", path = "../dos-actors/clients/arrow", package = "gmt_dos-clients_arrow" }
fsm = { version = "1.0.0", package = "m2-ctrl", features = ["fsm"] }
dos-clients_io = { version = "0.1.0", path = "../dos-actors/clients/io", package = "gmt_dos-clients_io" }

[features]
default = ["ze30"]
ze00 = ["mount/s1000d002ze00"]
ze30 = ["mount/s1000d002ze30"]
ze60 = ["mount/s1000d002ze60"]

[[bin]]
name = "windloading00"
path = "src/main.rs"
required-features = ["ze00"]

[[bin]]
name = "windloading60"
path = "src/main.rs"
required-features = ["ze60"]

[[bin]]
name = "windloading30"
path = "src/main.rs"
